--- a/apps/react-editor/package.json
+++ b/apps/react-editor/package.json
@@ -14,7 +14,7 @@
     "@dnd-kit/modifiers": "^6.0.0",
     "@dnd-kit/sortable": "^7.0.1",
     "@dnd-kit/utilities": "^3.2.0",
-    "@layerhub-io/use-timer": "^0.0.1",
+    "@layerhub-io/use-timer": "workspace:^0.0.1",
     "@reduxjs/toolkit": "^1.8.2",
     "@layerhub-io/react": "workspace:^0.3.3",
     "@layerhub-io/react-custom-scrollbar": "^0.0.1",
