--- a/package.json
+++ b/package.json
@@ -1,10 +1,15 @@
 {
   "name": "layerhub-io",
-  "scripts": {
-    "build": "pnpm turbo run build"
-  },
+  "packageManager": "yarn@3.2.3",
+  "private": true,
+  "workspaces": [
+    "packages/*"
+  ],
   "devDependencies": {
-    "@changesets/cli": "^2.22.0",
-    "turbo": "^1.2.11"
+    "typescript": "4.4.4"
+  },
+  "scripts": {
+    "build": "yarn workspaces foreach run build",
+    "test": "yarn workspaces foreach run test"
   }
 }
