--- a/packages/downloader/package.json
+++ b/packages/downloader/package.json
@@ -7,7 +7,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "tsc",
-    "prepublish": "pnpm build"
+    "prepublish": "yarn build"
   },
   "author": "Dany Boza",
   "license": "ISC",
