--- a/packages/react/package.json
+++ b/packages/react/package.json
@@ -5,10 +5,10 @@
   "types": "./dist/index.d.ts",
   "license": "MIT",
   "scripts": {
-    "build": "pnpm run clean && pnpm run compile",
+    "build": "yarn run clean && yarn run compile",
     "clean": "rimraf -rf ./dist",
     "compile": "tsc",
-    "prepublish": "pnpm build"
+    "prepublish": "yarn build"
   },
   "devDependencies": {
     "@layerhub-io/types": "workspace:^0.3.0",
@@ -16,6 +16,10 @@
     "@types/react-dom": "^18.0.0",
     "rimraf": "^3.0.2",
     "typescript": "^4.6.4"
+  },
+  "peerDependencies": {
+    "@layerhub-io/core": "*",
+    "@layerhub-io/types": "*"
   },
   "dependencies": {
     "@layerhub-io/core": "workspace:^0.3.3",
