--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@layerhub-io/core",
-  "version": "0.3.3",
+  "version": "0.3.4",
   "description": "",
   "main": "./dist/index.js",
   "types": "./dist/index.d.ts",
@@ -18,11 +18,13 @@
     "typescript": "^4.6.3"
   },
   "dependencies": {
-    "@layerhub-io/objects": "workspace:^0.2.0",
-    "@layerhub-io/types": "workspace:^0.3.0",
     "fabric": "^5.2.1",
     "lodash": "^4.17.21",
     "nanoid": "^3.3.3",
     "resize-observer-polyfill": "^1.5.1"
+  },
+  "peerDependencies": {
+    "@layerhub-io/objects": "*",
+    "@layerhub-io/types": "*"
   }
 }
